--- a/03_Implementacao/PRJ/Login.html
+++ b/03_Implementacao/PRJ/Login.html
@@ -17,8 +17,9 @@
         <div class="row ">
             <nav class="navbar fixed-top navbar-expand-lg  navbar-dark bg-dark d-flex justify-content-center">
                 <a class="navbar-brand" href="#">
-                    <img src="imagens/logo.png" width="30" height="30" alt="">
-                    etChill
+                    Rubik's
+                    <img src="images/rubik.png" width="40" height="40" alt="">
+                     Cube
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
