Rotations speed slider

--- a/03_Implementacao/PRJ/index.html
+++ b/03_Implementacao/PRJ/index.html
@@ -107,11 +107,35 @@
         </menu>
     </nav>
     <div id="userData2" class="d-flex flex-column justify-content-center">
-        <h3 class="textColorWhite m-auto">Suggestion:</h3>
-        <h4 id="suggestion" class="textColorWhite m-auto pb-4 text-center">If you need help :)</h4>
+        <div style="display: table;">
+            <div style="display: table-row">
+                <div style="display: table-cell;">
+                    <div style="width: 300px" class="mr-5">
+                        <h3 class="textColorWhite m-auto text-center">Suggestion:</h3>
+                        <h4 id="suggestion" class="textColorWhite m-auto pb-4 text-center">If you need help :)</h4>
+                        <button class="name noselect buttonAnimation m-auto" id="myImg">Show Formula</button>
+                    </div>
 
-        <button class="name noselect buttonAnimation m-auto" id="myImg">Show Formula</button>
-    </div>
+                </div>
+                <div style="display: table-cell" >
+
+                    <div class="ml-5">
+                        <h3 class="text-white text-center">SPEED</h3>
+                        <input type="range" min="1" max="6"  value="3" id="sliderFPS" class="name noselect buttonAnimation">
+
+                    </div>
+
+                </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
 </div>
 
 
